{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "dd22db53-6d68-4d68-b344-f4e27eaeb29c",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "5812ce0a-e5e6-477f-8913-f939d5dab15c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "bd5efd55-2753-408d-a51d-914adb7f0173",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootGun",
                    "type": "Button",
                    "id": "f41e4286-e460-430a-803a-9ead8b143721",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "5a43d153-940e-4faf-8ac7-ced5b9a8ef77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "a75f9003-82a9-4e4d-9405-058f35bd97ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bba1e683-48ea-4309-b4c5-f92aef93016c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "416bb9cc-0297-4a89-919f-abee5bbc8151",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "67d296f4-849c-45ef-b762-3e375915ab83",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "adedf276-cce7-41b7-9dc4-ae24b44f77b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "Keyboard",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a82a1fc0-005c-44ee-901b-afd34f8a18cf",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShootGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "886a1dce-c7a7-427b-8aa6-4910404d8d0a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}